# SimpleBlogPython

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API.md  API_CHANGES_SUMMARY.md  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  dockerfile  gunicorn.conf.py  manage.py  pyproject.toml
apps/content/: admin.py  urls.py
apps/content/migrations/: 0001_initial.py  0002_initial.py  0003_alter_category_description_alter_category_name_and_more.py  0003_post_status.py  0004_alter_post_options.py  0005_alter_post_unique_together.py  0006_alter_category_description_alter_category_slug.py
apps/content/models/: __init__.py  categories.py  posts.py  statistics.py  tags.py
apps/content/serializers/: __init__.py  categories.py  post.py  posts.py  tags.py
apps/content/views/: __init__.py  categories.py  post_detail.py  post_list.py  post_media.py  posts.py  tags.py
apps/media_files/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/media_files/migrations/: 0001_initial.py  0002_alter_mediafile_height_alter_mediafile_width.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_authorprofile_bio_and_more.py  0002_remove_authorprofile_profile_picture.py
apps/utils/: base_model.py  decorators.py  jsonapi_responses.py  permission_decorators.py  query_filters.py  request_utils.py  text.py  validators.py
docs/v1/: endpoint_structure.txt
nginx/: nginx.conf
simple_blog/: asgi.py  health.py  settings.py  urls.py  wsgi.py
simple_blog/settings/: base.py  local.py  production.py
tests/: conftest.py
tests/factories/: __init__.py  media_files.py  users.py
tests/mock_data/: 540663__saintsamael__smooth-vibe-music-loop-alternate.aac
tests/unit_tests/: test_models.py
(+61 files in other folders)
