[project]
name = "blog-apiv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.6",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "django-extensions>=3.2.3",
    "ipython>=9.0.1",
    "pydot>=3.0.4",
    "pyparsing>=3.2.1",
    "ruff>=0.9.9",
]
test = [
    "coverage>=7.6.12",
    "pytest>=8.3.5",
    "pytest-django>=4.10.0",
    "pytest-factoryboy>=2.7.0",
]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "simple_blog.settings.local"
python_files = "test.py test_*.py *_tests.py"
markers = [
	"models: intended for testing db models relationships"
]


[tool.coverage.run]
omit = [
	"simple_blog/settings/*",
	"simple_blog/wsgi.py",
	"simple_blog/asgi.py",
	"tests/factories/*",
	"tests/conftest.py",
	"manage.py"
]
